added env false to now json

--- a/now.json
+++ b/now.json
@@ -15,7 +15,10 @@
         "src": "/(.*)",
         "dest": "tappr-fe/$1"
       }
-    ]
+    ],
+    "env": {
+      "CI": "false"
+    }
   }
   
   
