adds rewrites from support

--- a/now.json
+++ b/now.json
@@ -15,6 +15,9 @@
         "src": "/(.*)",
         "dest": "tappr-fe/$1"
       }
+    ],
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
     ]
 
   }
